--- a/index.html
+++ b/index.html
@@ -1,119 +1,134 @@
-@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
-
 body {
-  background: linear-gradient(rgb(0,0,0,0), rgb(255,255,255,1)), url("/img/pexels-splash-of-rain-7321_downsized_crop2.jpg") no-repeat;
-  background-attachment: fixed;
-  color: #020202;
-  font-family: sans-serif;
-  font-size: 0.85em;
+  background: #f7d5f7 url("/img/cherrie.gif"); /*Replace with your own background*/
+	background-size: cover;
+	background-attachment: fixed;
+  background-position:center;
+	font-family: "VT-100", fixedsys, System, monospace;
+	font-size: 13px;
+  }
+  
+center {
+  text-align: center;
   }
   
 a {
-  color: #4a5859;
+  color: #3c5832;
   }
-  
-.title {
-  font-family: "Fjalla One";
-  font-size:1.2em;
-  }
-  
-.wrapper {
-  margin-top:30px;
-  width: 1200px;
-  }
-  
-/*Changing the size of the gap between boxes.*/
-.sidebar-img, .footer, .title, .links, .box {
-  margin-top: 15px;
-  }
-  
-.main {
-  column-gap: 15px;
-  }
-  
-.main-wrapper {
-  margin-left: 215px;
-  }
-  
-.footer {
-  margin-bottom: 15px;
-  }
-  
-.links {
+
+/*All sidebars go in here.*/  
+.sidebar-group {
+  position: fixed;
   top: 0;
-  margin-top:0;
+  margin-top: 25px;
   }
   
-.box, .sidebar-image, .sidebar-image img {
-  border: 0;
-  border-radius: 0.5em;
-  background: #ccd5d0;
+/*Code shared by all window-style boxes. To see what different specific sidebar classes look like, check the demo page.*/
+.sidebar, .mini-sidebar, .wide-sidebar, .box {
+  background: #dff7d5;
+  border-radius: 5px;
+  border: 1px solid #618a50;
+  box-shadow: 2px 2px #3c5832;
   }
   
-.sidebar .box, .sidebar-image {
-  background: #a5beb8;
-  border: #798886 1px solid;
+/*Prevent image overflow.*/
+.sidebar img, .mini-sidebar img, .wide-sidebar img, .box img {
+  max-width: 100%;
+  height:auto; /*Prevent squishing*/
   }
   
-.box {
-  border: #8d9896 1px solid;
+.sidebar, .sidebar-box {
+  display: inline-block;
+  vertical-align: top;
+  width: 160px;
   }
   
+/*Container for vertical stacks of multiple mini-sidebars*/
+.sidebar-box {
+  margin-left: 10px;
+  }
+  
+.sidebar {
+  width: 160px;
+  margin-left: 25px;
+  }
+  
+.mini-sidebar {
+  margin-bottom: 25px;
+  }
+  
+.wide-sidebar {
+  margin-left: 25px;
+  margin-top: 25px;
+  width: 340px;
+  min-height: 150px;
+  }
+  
+/*Inside/main text of window boxes.*/
 .inner {
-  overflow: hidden;
+  padding: 10px;
+  padding-bottom: 5px;
+  padding-top: 0px;
   }
-  
-/*Replace special spacer characters with different ones.*/
-.links li:before {
-  content: "ã€Ž"
-  }
-.links li:after, .links .last:after {
-  content: "ã€";
-  }
-  
-/*Slightly increase nav link spacing.*/
-.links li {
-  margin: 0 0.275em;
-  }
-  
-@media(max-width:1215px) {
-  .wrapper {    
-    width: 95%;
-    }
-    
-  .main-wrapper {
-    width: calc(100% - 225px);
-    }
-  }
-  
-/*Reapply mobile CSS, since we changed the widths.*/
-@media (orientation: portrait), (max-width:800px) {
-  .wrapper {
-    width: 100%;
-    }
-  
-  .main-wrapper, .sidebar, .footer {
-    margin: 0 auto;
-    width: 90%;
-    }
-  
-  .sidebar {
-    float: none;
-    display: block;
-    }
 
-  .sidebar-image {
-    margin: 0 auto;
-    width: 33%;
-    margin-top:25px;
-    }
-
-  .sidebar .sidebar-image img {
-    width: 100%;
-    }
-    
-  .footer {
-    margin-bottom: 25px;
-    }
+/*The title bar at the top of window boxes.*/
+.title-bar, .box-title-bar {
+  background: #7aa469;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  }
   
+/*The title bar of boxes has slightly more padding, since there's more room to space text.*/
+.box-title-bar {
+  padding: 7px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  }
+  
+/*For the symbol in the top right corner.*/
+.right {
+  float: right;
+  margin-right: 5px;
+  font-family: "Arial", sans-serif;
+  line-height: 12px;
+  }
+  
+/*Round circular image.*/
+.icon {
+  border: #80aa6f solid 2px;
+  border-radius: 50%;
+  }
+  
+/*Main body text boxes.*/
+.box {
+  margin-top: 25px;
+  margin-left: 400px;
+  width: 455px;
+  margin-bottom: 25px;
+  }
+  
+  
+  
+/*this part is a joke. no need to use it.*/
+.big-quote {
+  font-size: 32px;
+  color: #3c5832;
+  letter-spacing: 6px;
+  word-spacing: 2px;
+  font-family: "Garamond", "Bookman", serif;
+  position: fixed;
+  margin-left: 1050px;
+  margin-top: 300px;
+  top: 0;
+  width: 300px;
+  }
+  
+wide {
+  letter-spacing: 16px;
+  }
+  
+midwide {
+  letter-spacing: 3px;
   }
