--- a/index.html
+++ b/index.html
@@ -1,134 +1,200 @@
-body {
-  background: #f7d5f7 url("/img/cherrie.gif"); /*Replace with your own background*/
-	background-size: cover;
-	background-attachment: fixed;
-  background-position:center;
-	font-family: "VT-100", fixedsys, System, monospace;
-	font-size: 13px;
-  }
-  
-center {
-  text-align: center;
-  }
-  
-a {
-  color: #3c5832;
-  }
-
-/*All sidebars go in here.*/  
-.sidebar-group {
-  position: fixed;
-  top: 0;
-  margin-top: 25px;
-  }
-  
-/*Code shared by all window-style boxes. To see what different specific sidebar classes look like, check the demo page.*/
-.sidebar, .mini-sidebar, .wide-sidebar, .box {
-  background: #dff7d5;
-  border-radius: 5px;
-  border: 1px solid #618a50;
-  box-shadow: 2px 2px #3c5832;
-  }
-  
-/*Prevent image overflow.*/
-.sidebar img, .mini-sidebar img, .wide-sidebar img, .box img {
-  max-width: 100%;
-  height:auto; /*Prevent squishing*/
-  }
-  
-.sidebar, .sidebar-box {
-  display: inline-block;
-  vertical-align: top;
-  width: 160px;
-  }
-  
-/*Container for vertical stacks of multiple mini-sidebars*/
-.sidebar-box {
-  margin-left: 10px;
-  }
-  
-.sidebar {
-  width: 160px;
-  margin-left: 25px;
-  }
-  
-.mini-sidebar {
-  margin-bottom: 25px;
-  }
-  
-.wide-sidebar {
-  margin-left: 25px;
-  margin-top: 25px;
-  width: 340px;
-  min-height: 150px;
-  }
-  
-/*Inside/main text of window boxes.*/
-.inner {
-  padding: 10px;
-  padding-bottom: 5px;
-  padding-top: 0px;
-  }
-
-/*The title bar at the top of window boxes.*/
-.title-bar, .box-title-bar {
-  background: #7aa469;
-  color: white;
-  font-weight: bold;
-  padding: 5px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  }
-  
-/*The title bar of boxes has slightly more padding, since there's more room to space text.*/
-.box-title-bar {
-  padding: 7px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  }
-  
-/*For the symbol in the top right corner.*/
-.right {
-  float: right;
-  margin-right: 5px;
-  font-family: "Arial", sans-serif;
-  line-height: 12px;
-  }
-  
-/*Round circular image.*/
-.icon {
-  border: #80aa6f solid 2px;
-  border-radius: 50%;
-  }
-  
-/*Main body text boxes.*/
-.box {
-  margin-top: 25px;
-  margin-left: 400px;
-  width: 455px;
-  margin-bottom: 25px;
-  }
-  
-  
-  
-/*this part is a joke. no need to use it.*/
-.big-quote {
-  font-size: 32px;
-  color: #3c5832;
-  letter-spacing: 6px;
-  word-spacing: 2px;
-  font-family: "Garamond", "Bookman", serif;
-  position: fixed;
-  margin-left: 1050px;
-  margin-top: 300px;
-  top: 0;
-  width: 300px;
-  }
-  
-wide {
-  letter-spacing: 16px;
-  }
-  
-midwide {
-  letter-spacing: 3px;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>theme</title>
+ 
+<style>
+ 
+body{
+background-color: #CBC3C1;
+background-image: url('');
+color: #363538;
+}
+ 
+#all{
+background-color: #ccc;
+width: 615px;
+margin: 0 auto;
+}
+ 
+#side{
+background-color: #fff;
+float: left;
+width: 175px;
+position: fixed;
+}
+ 
+#sidepadding{
+padding: 10px;
+}
+ 
+.sideimgholder{
+display: flex;
+justify-content: center;
+align-items: center;
+opacity: 0.7;
+}
+ 
+#sideimg{
+width: 175px;
+}
+ 
+#nav{
+font-size: 14px;
+padding: 5px 0px 5px 0px;
+}
+ 
+ul{
+margin: 0px;
+padding-left: 0px;
+width: 175px;
+-webkit-column-count: 2;
+-moz-column-count: 2;
+column-count: 2;
+}
+ 
+li{
+list-style-type:;
+width: 71px;
+display: inline;
+float: left;
+}
+ 
+#sidecontent{
+font-size: 13px;
+text-align: justify;
+}
+ 
+.divider{
+border-top: 1px dotted #7A787D;
+}
+ 
+#main{
+background-color: #fff;
+float: right;
+width: 425px;
+}
+ 
+.subheaders{
+margin: 0px;
+font-weight: normal;
+letter-spacing: 2px;
+font-size: 20px;
+line-height: 13px;
+color: #fff;
+background-color: #7A787D;
+}
+ 
+.maincontent{
+padding: 0px 15px 15px 15px;
+text-align: justify;
+font-size: 14px;
+letter-spacing: 1px;
+}
+ 
+a{
+text-decoration: none;
+color: #BA7F61;
+}
+ 
+a:visited{
+color: #BA7F61;
+}
+ 
+a:hover{
+font-style: italic;
+}
+ 
+a:active{
+font-weight: bold;
+}
+ 
+::-webkit-scrollbar{
+width: 8px; 
+}
+ 
+::-webkit-scrollbar-track{
+background-color: transparent;
+}
+ 
+::-webkit-scrollbar-thumb{
+background-color: #7A787D;
+}
+ 
+#credit{
+font-size: 12px;
+position: fixed;
+bottom: 0;
+right: 0;
+}
+ 
+</style>
+ 
+</head>
+ 
+<body>
+ 
+<div id="all">
+ 
+<div id="side">
+<h2 class="subheaders">header here</h2>
+ 
+<div id="sidepadding">
+ 
+<div class="sideimgholder">
+<img id="sideimg" src="https://i.imgur.com/bExQthf.gif">
+</div>
+ 
+<div id="nav">
+<ul>
+<li><a href="">home</a></li>
+<li><a href="">about</a></li>
+<li><a href="">gallery</a></li>
+<li><a href="">blog</a></li>
+<li><a href="">links</a></li>
+<li><a href="">misc</a></li>
+</ul>
+</div>
+ 
+<div class="divider"></div>
+ 
+<div id="sidecontent">
+<p style="margin-top:5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rhoncus odio et neque varius dapibus. Praesent laoreet ipsum.</p>
+ 
+<div class="sideimgholder">
+<img src="https://i.imgur.com/1dEdQoa.gif">
+</div>
+ 
+</div>
+</div>
+</div>
+ 
+<div id="main">
+<h2 class="subheaders">header here</h2>
+ 
+<div class="maincontent">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rhoncus odio et neque varius dapibus. Praesent laoreet ipsum nec urna malesuada, quis auctor lorem sagittis. Suspendisse semper nisl vitae ligula varius malesuada. Aenean consequat libero risus, nec rutrum felis tincidunt sed. Nullam non metus in neque vehicula convallis vitae et est. Fusce eleifend leo ut urna vulputate</p>
+ 
+<p>Maecenas a leo sed neque dapibus lobortis. Vestibulum ornare est in fermentum lacinia. Curabitur ut consectetur risus. Donec consectetur lorem eget mauris facilisis, ut tempor dui congue. In nunc.</p>
+ 
+<p>Phasellus luctus elementum sagittis. Sed id blandit nisl. Vivamus volutpat consequat condimentum. Curabitur sit amet eros urna. Curabitur vitae eros elementum, iaculis ipsum eu, tempus massa. Nullam turpis metus, mollis non mi sit amet, ultrices pharetra orci.</p>
+ 
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rhoncus odio et neque varius dapibus. Praesent laoreet ipsum nec urna malesuada, quis auctor lorem sagittis. Suspendisse semper nisl vitae ligula varius malesuada. Aenean consequat libero risus, nec rutrum felis tincidunt sed. Nullam non metus in neque vehicula convallis vitae et est. Fusce eleifend leo ut urna vulputate</p>
+ 
+<p>Maecenas a leo sed neque dapibus lobortis. Vestibulum ornare est in fermentum lacinia. Curabitur ut consectetur risus. Donec consectetur lorem eget mauris facilisis, ut tempor dui congue. In nunc.</p>
+ 
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rhoncus odio et neque varius dapibus. Praesent laoreet ipsum nec urna malesuada, quis auctor lorem sagittis. Suspendisse semper nisl vitae ligula varius malesuada. Aenean consequat libero risus, nec rutrum felis tincidunt sed. Nullam non metus in neque vehicula convallis vitae et est. Fusce eleifend leo ut urna vulputate</p>
+ 
+<p>Maecenas a leo sed neque dapibus lobortis. Vestibulum ornare est in fermentum lacinia. Curabitur ut consectetur risus. Donec consectetur lorem eget mauris facilisis, ut tempor dui congue. In nunc.</p>
+</div>
+ 
+</div>
+</div>
+ 
+<div id="credit"><a href="https://repth.neocities.org/index.html">©repth</a></div>
+ 
+</body>
+ 
+</html>
