--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ right: 0;
 <div class="divider"></div>
  
 <div id="sidecontent">
-<p style="margin-top:5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rhoncus odio et neque varius dapibus. Praesent laoreet ipsum.</p>
+<p style="margin-top:5px;">Just a little corner of my internet sandbox that functions essentially as my E-Diary lmao</p>
  
 <div class="sideimgholder">
 <img src="https://i.imgur.com/1dEdQoa.gif">
