--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ right: 0;
 <p style="margin-top:5px;">Just a little corner of my internet sandbox that functions essentially as my E-Diary lmao</p>
  
 <div class="sideimgholder">
-<img src="https://i.imgur.com/1dEdQoa.gif">
+<img src="https://i.imgur.com/aTOEcrI.png">
 </div>
  
 </div>
