--- a/index.html
+++ b/index.html
@@ -231,15 +231,14 @@ margin: 0;
 <img class="avatar" src="https://64.media.tumblr.com/0882da2752698f3af95bb0430cb9a3ed/tumblr_pk7notiPBU1rnxhlq_540.gif">
  
 <!-- SIDEBAR DESCRIPTION -->
-<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ex quis nisi auctor mollis.</p>
+<p class="desc">tidbits of my life from my little sandbox on the net</p>
  
 <!-- SIDEBAR NAV -->
 <h2 class="sideheaders">Navigate</h2>
 <ul>
-<li><a href="">Home</a></li>
+<li><a href="https://dukenanno.github.io/siopaocity/">Home</a></li>
 <li><a href="">About</a></li>
 <li><a href="">Gallery</a></li>
-<li><a href="">Blog</a></li>
 <li><a href="">Resources</a></li>
 <li><a href="">Links</a></li>
 <li><a href="">Other</a></li>
