--- a/index.html
+++ b/index.html
@@ -262,13 +262,15 @@ margin: 0;
  
 <!-- POST ICON AND DATE  -->
 <div class="left">
-<img class="icon" src="https://i.imgur.com/ciYUuHm.jpg">
-<p>06/18/22</p>
+<img class="icon" src="blob:https://imgur.com/f0e27ae9-4aa0-433b-8739-a1ea957a5cf7">
+<p>07/16/2023</p>
 </div>
  
 <!-- POST TEXT -->
 <div class="right">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ex quis nisi auctor mollis. Phasellus nec nunc sit amet purus mattis sodales. Morbi lectus nunc, tincidunt dapibus sem vitae, porttitor ornare leo. Fusce elit augue, rhoncus sed finibus non, faucibus id tellus. Pellentesque nec justo ex. Praesent nec velit at mauris ultrices bibendum. Fusce fringilla, magna eu bibendum ornare, lacus sapien ornare est, egestas semper urna orci lobortis massa. Maecenas sed ultrices ex, sed cursus orci. Donec orci massa, rhoncus vitae elit sed, tempor gravida nunc. Aenean id iaculis risus, ut interdum mauris. Nunc ac rutrum justo. Praesent eleifend, nunc ac cursus vestibulum, odio nulla fringilla nisl, eu laoreet quam orci eget libero. Maecenas sollicitudin felis nunc, dignissim iaculis est iaculis ut.</p>
+<p>First official post on my blog, and first day of official detransition. It's a whole story that i don't really want to go into right now but i still have dysphoria just to make that clear. But anywaysss, here's me in my swaggy new wig<br>
+<img src="https://i.imgur.com/d3V6qHf.jpg">
+</p>
 </div>
  
 </div>
