--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ margin: 0;
  
 <!-- POST ICON AND DATE  -->
 <div class="left">
-<img class="icon" src="https://imgur.com/f0e27ae9-4aa0-433b-8739-a1ea957a5cf7">
+<img class="icon" src="https://i.imgur.com/Y5Hxmqc.jpg">
 <p>07/16/2023</p>
 </div>
  
